--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "使你只需要按住滑鼠右鍵並畫出自定的手勢，就可以迅速執行一系列的操作",
-    "description": "Allows you to perform a bunch of actions through custom mouse gestures while holding the right mouse button."
+    "message": "Customizable mouse gesture addon, which supports over 40 different actions.",
+    "description": "Customizable mouse gesture addon, which supports over 40 different actions."
   },
   "addonUpdateNotificationTitle": {
     "message": "$NAME$ 已經完成更新！",
@@ -56,22 +56,34 @@
     "message": "middle",
     "description": "middle"
   },
+  "settingNameDistanceThreshold": {
+    "message": "Gesture distance threshold",
+    "description": "Gesture distance threshold"
+  },
+  "settingNameDistanceSensitivity": {
+    "message": "Gesture sensitivity",
+    "description": "Gesture sensitivity"
+  },
 
-  "settingNameDisplayGesture": {
+  "settingNameDisplayTrace": {
     "message": "顯示手勢軌跡",
     "description": "Display gesture trace"
   },
-  "settingNameGestureColor": {
+  "settingNameTraceColor": {
     "message": "軌跡顏色",
     "description": "Line color"
   },
-  "settingNameGestureOpacity": {
+  "settingNameTraceOpacity": {
     "message": "不透明度",
-    "description": "opacity"
+    "description": "Opacity"
   },
-  "settingNameGestureWidth": {
+  "settingNameTraceWidth": {
     "message": "軌跡寬度",
     "description": "Line width"
+  },
+  "settingNameTraceGrowth": {
+    "message": "Line growth",
+    "description": "Line growth"
   },
   "settingNameDisplayAction": {
     "message": "顯示操作",
@@ -135,13 +147,25 @@
     "message": "The mouse button which will trigger the gesture.",
     "description": "The mouse button which will trigger the gesture."
   },
-  "settingDescriptionDisplayGesture": {
+  "settingDescriptionDistanceThreshold": {
+    "message": "The minimum mouse distance until the gesture gets activated.",
+    "description": "The minimum mouse distance until the Gesture gets activated."
+  },
+  "settingDescriptionDistanceSensitivity": {
+    "message": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness.",
+    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  },
+  "settingDescriptionDisplayTrace": {
     "message": "畫出滑鼠的移動軌跡",
     "description": "Draws a trace to display the mouse movement."
   },
-  "settingDescriptionGestureOpacity": {
+  "settingDescriptionTraceOpacity": {
     "message": "可以是 0 (完全透明) 到 1 (完全不透明) 之間的值",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  },
+  "settingDescriptionTraceGrowth": {
+    "message": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width.",
+    "description": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width."
   },
   "settingDescriptionDisplayAction": {
     "message": "顯示與目前手勢對應的操作 (如果有)",
@@ -249,6 +273,14 @@
     "message": "捲動到頁面底部",
     "description": "Scroll to the bottom"
   },
+  "actionNameScrollPageDown": {
+    "message": "Scroll page down",
+    "description": "Scroll page down"
+  },
+  "actionNameScrollPageUp": {
+    "message": "Scroll page up",
+    "description": "Scroll page up"
+  },
   "actionNameNext": {
     "message": "下一個分頁",
     "description": "Next tab"
@@ -334,8 +366,8 @@
     "description": "Print"
   },
   "actionNamePrintPreview": {
-    "message": "Print Preview",
-    "description": "Print Preview"
+    "message": "Print preview",
+    "description": "Print preview"
   },
 
   "actionDescriptionBookmark": {
@@ -404,11 +436,19 @@
   },
   "actionDescriptionScrollTop": {
     "message": "捲動畫面至頁面的頂部",
-    "description": "Jumps to the top of the page."
+    "description": "Scrolls to the top of the page."
   },
   "actionDescriptionScrollBottom": {
     "message": "滑動畫面至頁面的底部",
-    "description": "Jumps to the bottom of the page."
+    "description": "Scrolls to the bottom of the page."
+  },
+  "actionDescriptionScrollPageDown": {
+    "message": "Scrolls down by the length of the current view.",
+    "description": "Scrolls down by the length of the current view."
+  },
+  "actionDescriptionScrollPageUp": {
+    "message": "Scrolls up by the length of the current view.",
+    "description": "Scrolls up by the length of the current view."
   },
   "actionDescriptionNext": {
     "message": "切換到目前分頁右側的分頁",
