--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "Umožňuje vykonávat akce pomocí gest myši při stisknutém pravém tlačítku.",
-    "description": "Allows you to perform a bunch of actions through custom mouse gestures while holding the right mouse button."
+    "message": "Customizable mouse gesture addon, which supports over 40 different actions.",
+    "description": "Customizable mouse gesture addon, which supports over 40 different actions."
   },
 
   "addonUpdateNotificationTitle": {
@@ -58,22 +58,34 @@
     "message": "middle",
     "description": "middle"
   },
+  "settingNameDistanceThreshold": {
+    "message": "Gesture distance threshold",
+    "description": "Gesture distance threshold"
+  },
+  "settingNameDistanceSensitivity": {
+    "message": "Gesture sensitivity",
+    "description": "Gesture sensitivity"
+  },
 
-  "settingNameDisplayGesture": {
+  "settingNameDisplayTrace": {
     "message": "Zobrazit stopu gesta",
     "description": "Display gesture path"
   },
-  "settingNameGestureColor": {
+  "settingNameTraceColor": {
     "message": "Barva stopy",
     "description": "Line color"
   },
-  "settingNameGestureOpacity": {
+  "settingNameTraceOpacity": {
     "message": "Průhlednost",
-    "description": "opacity"
+    "description": "Opacity"
   },
-  "settingNameGestureWidth": {
+  "settingNameTraceWidth": {
     "message": "Šířka stopy",
     "description": "Line width"
+  },
+  "settingNameTraceGrowth": {
+    "message": "Line growth",
+    "description": "Line growth"
   },
   "settingNameDisplayAction": {
     "message": "Zobrazit akci",
@@ -137,13 +149,25 @@
     "message": "The mouse button which will trigger the gesture.",
     "description": "The mouse button which will trigger the gesture."
   },
-  "settingDescriptionDisplayGesture": {
+  "settingDescriptionDistanceThreshold": {
+    "message": "The minimum mouse distance until the gesture gets activated.",
+    "description": "The minimum mouse distance until the Gesture gets activated."
+  },
+  "settingDescriptionDistanceSensitivity": {
+    "message": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness.",
+    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  },
+  "settingDescriptionDisplayTrace": {
     "message": "Vykreslí stopu zobrazující pohyb myši.",
     "description": "Draws a path to display the mouse movement."
   },
-  "settingDescriptionGestureOpacity": {
+  "settingDescriptionTraceOpacity": {
     "message": "Můžete použít libovolnou hodnotu od 0 (neviditelná) do 1 (viditelná).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  },
+  "settingDescriptionTraceGrowth": {
+    "message": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width.",
+    "description": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width."
   },
   "settingDescriptionDisplayAction": {
     "message": "Zobrazí akci, která bude vyvolána aktuálním gestem.",
@@ -251,6 +275,14 @@
     "message": "Přejít na konec",
     "description": "Scroll to the bottom"
   },
+  "actionNameScrollPageDown": {
+    "message": "Scroll page down",
+    "description": "Scroll page down"
+  },
+  "actionNameScrollPageUp": {
+    "message": "Scroll page up",
+    "description": "Scroll page up"
+  },
   "actionNameNext": {
     "message": "Další panel",
     "description": "Next tab"
@@ -336,8 +368,8 @@
     "description": "Print"
   },
   "actionNamePrintPreview": {
-    "message": "Print Preview",
-    "description": "Print Preview"
+    "message": "Print preview",
+    "description": "Print preview"
   },
 
   "actionDescriptionBookmark": {
@@ -406,11 +438,19 @@
   },
   "actionDescriptionScrollTop": {
     "message": "Přejde na začátek stránky.",
-    "description": "Jumps to the top of the page."
+    "description": "Scrolls to the top of the page."
   },
   "actionDescriptionScrollBottom": {
     "message": "Přejde na konec stránky.",
-    "description": "Jumps to the bottom of the page."
+    "description": "Scrolls to the bottom of the page."
+  },
+  "actionDescriptionScrollPageDown": {
+    "message": "Scrolls down by the length of the current view.",
+    "description": "Scrolls down by the length of the current view."
+  },
+  "actionDescriptionScrollPageUp": {
+    "message": "Scrolls up by the length of the current view.",
+    "description": "Scrolls up by the length of the current view."
   },
   "actionDescriptionNext": {
     "message": "Přepne na panel vpravo od aktuálního panelu.",
