--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -1,7 +1,7 @@
 {
   "extensionDescription": {
-    "message": "允许您通过自定义的手势执行执行一系列操作，只需按住鼠标右键并画出手势。",
-    "description": "Allows you to perform a bunch of actions through custom mouse gestures while holding the right mouse button."
+    "message": "Customizable mouse gesture addon, which supports over 40 different actions.",
+    "description": "Customizable mouse gesture addon, which supports over 40 different actions."
   },
 
   "addonUpdateNotificationTitle": {
@@ -58,22 +58,34 @@
     "message": "middle",
     "description": "middle"
   },
+  "settingNameDistanceThreshold": {
+    "message": "Gesture distance threshold",
+    "description": "Gesture distance threshold"
+  },
+  "settingNameDistanceSensitivity": {
+    "message": "Gesture sensitivity",
+    "description": "Gesture sensitivity"
+  },
 
-  "settingNameDisplayGesture": {
+  "settingNameDisplayTrace": {
     "message": "显示手势路径",
     "description": "Display gesture trace"
   },
-  "settingNameGestureColor": {
+  "settingNameTraceColor": {
     "message": "线条颜色",
     "description": "Line color"
   },
-  "settingNameGestureOpacity": {
+  "settingNameTraceOpacity": {
     "message": "不透明度",
-    "description": "opacity"
+    "description": "Opacity"
   },
-  "settingNameGestureWidth": {
+  "settingNameTraceWidth": {
     "message": "线条宽度",
     "description": "Line width"
+  },
+  "settingNameTraceGrowth": {
+    "message": "Line growth",
+    "description": "Line growth"
   },
   "settingNameDisplayAction": {
     "message": "显示操作",
@@ -137,13 +149,25 @@
     "message": "The mouse button which will trigger the gesture.",
     "description": "The mouse button which will trigger the gesture."
   },
-  "settingDescriptionDisplayGesture": {
+  "settingDescriptionDistanceThreshold": {
+    "message": "The minimum mouse distance until the gesture gets activated.",
+    "description": "The minimum mouse distance until the Gesture gets activated."
+  },
+  "settingDescriptionDistanceSensitivity": {
+    "message": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness.",
+    "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
+  },
+  "settingDescriptionDisplayTrace": {
     "message": "绘出鼠标移动的路径。",
     "description": "Draws a trace to display the mouse movement."
   },
-  "settingDescriptionGestureOpacity": {
+  "settingDescriptionTraceOpacity": {
     "message": "允许 0 (不可见) 至 1 (可见) 之间的任何值。",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
+  },
+  "settingDescriptionTraceGrowth": {
+    "message": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width.",
+    "description": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width."
   },
   "settingDescriptionDisplayAction": {
     "message": "显示与当前手势相匹配的操作（如果存在）。",
@@ -251,6 +275,14 @@
     "message": "滚动到底部",
     "description": "Scroll to the bottom"
   },
+  "actionNameScrollPageDown": {
+    "message": "Scroll page down",
+    "description": "Scroll page down"
+  },
+  "actionNameScrollPageUp": {
+    "message": "Scroll page up",
+    "description": "Scroll page up"
+  },
   "actionNameNext": {
     "message": "下一个标签页",
     "description": "Next tab"
@@ -336,8 +368,8 @@
     "description": "Print"
   },
   "actionNamePrintPreview": {
-    "message": "Print Preview",
-    "description": "Print Preview"
+    "message": "Print preview",
+    "description": "Print preview"
   },
 
   "actionDescriptionBookmark": {
@@ -406,11 +438,19 @@
   },
   "actionDescriptionScrollTop": {
     "message": "跳至页面顶部。",
-    "description": "Jumps to the top of the page."
+    "description": "Scrolls to the top of the page."
   },
   "actionDescriptionScrollBottom": {
     "message": "跳至页面底部。",
-    "description": "Jumps to the bottom of the page."
+    "description": "Scrolls to the bottom of the page."
+  },
+  "actionDescriptionScrollPageDown": {
+    "message": "Scrolls down by the length of the current view.",
+    "description": "Scrolls down by the length of the current view."
+  },
+  "actionDescriptionScrollPageUp": {
+    "message": "Scrolls up by the length of the current view.",
+    "description": "Scrolls up by the length of the current view."
   },
   "actionDescriptionNext": {
     "message": "切换到当前标签页右侧的标签页。",
