added advanced settings, enhanced settings style

--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -58,6 +58,10 @@
     "message": "middle",
     "description": "middle"
   },
+  "settingNameAdvancedSettings": {
+    "message": "Advanced settings",
+    "description": "Advanced settings"
+  },
   "settingNameDistanceThreshold": {
     "message": "Gesture distance threshold",
     "description": "Gesture distance threshold"
