--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Customizable mouse gesture addon, which supports over 40 different actions.",
+    "message": "Anpassbares Mausgesten-Addon, das über 40 verschiedene Aktionen unterstützt.",
     "description": "Customizable mouse gesture addon, which supports over 40 different actions."
   },
 
@@ -57,6 +57,10 @@
   "settingNameMouseButtonMiddle": {
     "message": "mitte",
     "description": "middle"
+  },
+  "settingNameAdvancedSettings": {
+    "message": "Erweiterte Einstellungen",
+    "description": "Advanced settings"
   },
   "settingNameDistanceThreshold": {
     "message": "Gesten-Distanzschwelle",
