--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -58,6 +58,10 @@
     "message": "中键",
     "description": "middle"
   },
+  "settingNameAdvancedSettings": {
+    "message": "Advanced settings",
+    "description": "Advanced settings"
+  },
   "settingNameDistanceThreshold": {
     "message": "手势距离阈值",
     "description": "Gesture distance threshold"
