--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -56,6 +56,10 @@
     "message": "中鍵",
     "description": "middle"
   },
+  "settingNameAdvancedSettings": {
+    "message": "Advanced settings",
+    "description": "Advanced settings"
+  },
   "settingNameDistanceThreshold": {
     "message": "手勢距離門檻值",
     "description": "Gesture distance threshold"
