added wheel gesture

--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -561,6 +561,31 @@
     "message": "Diese Geste wird entweder durch Halten der rechten Maustaste und Klick auf die linke oder umgekehrt ausgeführt.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
+  
+  "extraNameWheelActive": {
+    "message": "Wheel gesture",
+    "description": "Wheel gesture"
+  },
+  "extraNameWheelMouseButton": {
+    "message": "Wheel gesture mouse button",
+    "description": "Wheel gesture mouse button"
+  },
+  "extraNameWheelUp": {
+    "message": "Wheel up",
+    "description": "Wheel up"
+  },
+  "extraNameWheelDown": {
+    "message": "Wheel down",
+    "description": "Wheel down"
+  },
+  "extraDescriptionWheelActive": {
+    "message": "Scroll up or down while holding the wheel gesture button.",
+    "description": "Scroll up or down while holding the wheel gesture button."
+  },
+  "extraDescriptionWheelMouseButton": {
+    "message": "The mouse button which will trigger the wheel gesture.",
+    "description": "The mouse button which will trigger the wheel gesture."
+  },
 
   "toggleButtonOn": {
     "message": "An",
