--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -57,7 +57,7 @@
     "description": "middle"
   },
   "settingNameAdvancedSettings": {
-    "message": "Advanced settings",
+    "message": "進階設定",
     "description": "Advanced settings"
   },
   "settingNameDistanceThreshold": {
@@ -278,11 +278,11 @@
     "description": "Scroll to the bottom"
   },
   "actionNameScrollPageDown": {
-    "message": "向上滑動頁面",
+    "message": "向下滑動頁面",
     "description": "Scroll page down"
   },
   "actionNameScrollPageUp": {
-    "message": "向下滑動頁面",
+    "message": "向上滑動頁面",
     "description": "Scroll page up"
   },
   "actionNameNext": {
@@ -561,27 +561,27 @@
   },
 
   "extraNameWheelActive": {
-    "message": "Wheel gesture",
+    "message": "滾輪手勢",
     "description": "Wheel gesture"
   },
   "extraNameWheelMouseButton": {
-    "message": "Wheel gesture mouse button",
+    "message": "滾輪手勢按鍵",
     "description": "Wheel gesture mouse button"
   },
   "extraNameWheelUp": {
-    "message": "Wheel up",
+    "message": "向上滾動",
     "description": "Wheel up"
   },
   "extraNameWheelDown": {
-    "message": "Wheel down",
+    "message": "向下滾動",
     "description": "Wheel down"
   },
   "extraDescriptionWheelActive": {
-    "message": "Scroll up or down while holding the wheel gesture button.",
+    "message": "按住滾輪按鍵，將滾輪向上或向下滾動",
     "description": "Scroll up or down while holding the wheel gesture button."
   },
   "extraDescriptionWheelMouseButton": {
-    "message": "The mouse button which will trigger the wheel gesture.",
+    "message": "觸發滾輪手勢的滑鼠按鍵",
     "description": "The mouse button which will trigger the wheel gesture."
   },
 
