Update zh_CN locale

--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -59,7 +59,7 @@
     "description": "middle"
   },
   "settingNameAdvancedSettings": {
-    "message": "Advanced settings",
+    "message": "高级设置",
     "description": "Advanced settings"
   },
   "settingNameDistanceThreshold": {
@@ -563,27 +563,27 @@
   },
 
   "extraNameWheelActive": {
-    "message": "Wheel gesture",
+    "message": "滚轮手势",
     "description": "Wheel gesture"
   },
   "extraNameWheelMouseButton": {
-    "message": "Wheel gesture mouse button",
+    "message": "滚轮手势鼠标按键",
     "description": "Wheel gesture mouse button"
   },
   "extraNameWheelUp": {
-    "message": "Wheel up",
+    "message": "向上滚动",
     "description": "Wheel up"
   },
   "extraNameWheelDown": {
-    "message": "Wheel down",
+    "message": "向下滚动",
     "description": "Wheel down"
   },
   "extraDescriptionWheelActive": {
-    "message": "Scroll up or down while holding the wheel gesture button.",
+    "message": "按住滚轮手势按键时向上或向下滚动。",
     "description": "Scroll up or down while holding the wheel gesture button."
   },
   "extraDescriptionWheelMouseButton": {
-    "message": "The mouse button which will trigger the wheel gesture.",
+    "message": "触发滚轮手势的鼠标按键。",
     "description": "The mouse button which will trigger the wheel gesture."
   },
 
