--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Customizable mouse gesture addon, which supports over 40 different actions.",
+    "message": "Nastavitelný doplněk s gesty myší, který obsahuje více než 40 různých akcí.",
     "description": "Customizable mouse gesture addon, which supports over 40 different actions."
   },
 
@@ -26,7 +26,7 @@
   },
 
   "navigationSettings": {
-    "message": "Nastavení",
+    "message": "Nastave&shy;ní",
     "description": "Settings"
   },
   "navigationGestures": {
@@ -34,7 +34,7 @@
     "description": "Gestures"
   },
   "navigationExtras": {
-    "message": "Extras",
+    "message": "Extra",
     "description": "Extras"
   },
   "navigationAbout": {
@@ -43,31 +43,31 @@
   },
 
   "settingNameMouseButton": {
-    "message": "Gesture mouse button",
+    "message": "Tlačítko gesta myši",
     "description": "Gesture mouse button"
   },
   "settingNameMouseButtonLeft": {
-    "message": "left",
+    "message": "levé",
     "description": "left"
   },
   "settingNameMouseButtonRight": {
-    "message": "right",
+    "message": "pravé",
     "description": "right"
   },
   "settingNameMouseButtonMiddle": {
-    "message": "middle",
+    "message": "prostřední",
     "description": "middle"
   },
   "settingNameAdvancedSettings": {
-    "message": "Advanced settings",
+    "message": "Pokročilé nastavení",
     "description": "Advanced settings"
   },
   "settingNameDistanceThreshold": {
-    "message": "Gesture distance threshold",
+    "message": "Práh vzdálenosti gesta",
     "description": "Gesture distance threshold"
   },
   "settingNameDistanceSensitivity": {
-    "message": "Gesture sensitivity",
+    "message": "Citlivost gesta",
     "description": "Gesture sensitivity"
   },
 
@@ -88,7 +88,7 @@
     "description": "Line width"
   },
   "settingNameTraceGrowth": {
-    "message": "Line growth",
+    "message": "Růst stopy",
     "description": "Line growth"
   },
   "settingNameDisplayAction": {
@@ -150,15 +150,15 @@
   },
 
   "settingDescriptionMouseButton": {
-    "message": "The mouse button which will trigger the gesture.",
+    "message": "Tlačítko myši které spustí gesto.",
     "description": "The mouse button which will trigger the gesture."
   },
   "settingDescriptionDistanceThreshold": {
-    "message": "The minimum mouse distance until the gesture gets activated.",
+    "message": "Minimální vzdálenost kterou myš urazí než se aktivuje gesto.",
     "description": "The minimum mouse distance until the Gesture gets activated."
   },
   "settingDescriptionDistanceSensitivity": {
-    "message": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness.",
+    "message": "Minimální vzdálenost kterou musí myš urazit, než je rozpoznán nový směr gesta. Toto ovlivní i plynulost stopy.",
     "description": "The minimum mouse distance until a new direction gets recognized. This will also impact the trace smoothness."
   },
   "settingDescriptionDisplayTrace": {
@@ -170,7 +170,7 @@
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
   "settingDescriptionTraceGrowth": {
-    "message": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width.",
+    "message": "Počet pixelů o který bude stopa růst dokud nedosáhne maximální šířky. Žádný růst pokud je nastavena stejná hodnota jako šířka stopy.",
     "description": "The amount of pixels that the line will grow until the maximum line width. No growth if it is set equal to the line width."
   },
   "settingDescriptionDisplayAction": {
@@ -272,19 +272,19 @@
     "description": "Toggle mute"
   },
   "actionNameScrollTop": {
-    "message": "Přejít na začátek",
+    "message": "Posunout na začátek",
     "description": "Scroll to the top"
   },
   "actionNameScrollBottom": {
-    "message": "Přejít na konec",
+    "message": "Posunout na konec",
     "description": "Scroll to the bottom"
   },
   "actionNameScrollPageDown": {
-    "message": "Scroll page down",
+    "message": "Posunout o stránku dolů",
     "description": "Scroll page down"
   },
   "actionNameScrollPageUp": {
-    "message": "Scroll page up",
+    "message": "Posunout o stránku nahoru",
     "description": "Scroll page up"
   },
   "actionNameNext": {
@@ -352,27 +352,27 @@
     "description": "Search selected text"
   },
   "actionNameRemoveRight": {
-    "message": "Remove right tabs",
+    "message": "Zavřít panely vpravo",
     "description": "Remove right tabs"
   },
   "actionNameRemoveLeft": {
-    "message": "Remove left tabs",
+    "message": "Zavřít panely vlevo",
     "description": "Remove left tabs"
   },
   "actionNameRemoveOther": {
-    "message": "Remove other tabs",
+    "message": "Zavřít ostatní panely",
     "description": "Remove other tabs"
   },
   "actionNameSaveAsPDF": {
-    "message": "Saves as PDF",
+    "message": "Uložit jako PDF",
     "description": "Saves as PDF"
   },
   "actionNamePrint": {
-    "message": "Print",
+    "message": "Vytisknout",
     "description": "Print"
   },
   "actionNamePrintPreview": {
-    "message": "Print preview",
+    "message": "Náhled tisku",
     "description": "Print preview"
   },
 
@@ -449,11 +449,11 @@
     "description": "Scrolls to the bottom of the page."
   },
   "actionDescriptionScrollPageDown": {
-    "message": "Scrolls down by the length of the current view.",
+    "message": "Posune pohled dolů o výšku aktuálního zobrazení.",
     "description": "Scrolls down by the length of the current view."
   },
   "actionDescriptionScrollPageUp": {
-    "message": "Scrolls up by the length of the current view.",
+    "message": "Posune pohled nahoru o výšku aktuálního zobrazení.",
     "description": "Scrolls up by the length of the current view."
   },
   "actionDescriptionNext": {
@@ -521,83 +521,83 @@
     "description": "Starts a web search of the selected text."
   },
   "actionDescriptionRemoveRight": {
-    "message": "Removes all tabs to the right side.",
+    "message": "Zavře všechny panely napravo od aktuálního.",
     "description": "Removes all tabs to the right side."
   },
   "actionDescriptionRemoveLeft": {
-    "message": "Removes all tabs to the left side, excluding pinned tabs.",
+    "message": "Zavře všechny panely nalevo od aktuálního, kromě připnutých panelů.",
     "description": "Removes all tabs to the left side, excluding pinned tabs."
   },
   "actionDescriptionRemoveOther": {
-    "message": "Remove all tabs except of the current tab and pinned tabs.",
+    "message": "Zavře všechny panely kromě aktuálního a kromě připlých panelů.",
     "description": "Remove all tabs except of the current tab and pinned tabs."
   },
   "actionDescriptionSaveAsPDF": {
-    "message": "Saves the current page as a pdf file.",
+    "message": "Uloží aktuální stránku jako soubor formátu PDF.",
     "description": "Saves the current page as a pdf file."
   },
   "actionDescriptionPrint": {
-    "message": "Prints the current page by prompting the print dialog.",
+    "message": "Vyvolá dialog tisku a vytiskne aktuální stránku.",
     "description": "Prints the current page by prompting the print dialog."
   },
   "actionDescriptionPrintPreview": {
-    "message": "Opens the print preview of the current page.",
+    "message": "Otevře náhled tisku aktuální stránky.",
     "description": "Opens the print preview of the current page."
   },
 
   "extraNameRockerActive": {
-    "message": "Rocker gesture",
+    "message": "Houpací gesta",
     "description": "Rocker gesture"
   },
   "extraNameRockerRightMouseClick": {
-    "message": "Right mouse click",
+    "message": "Klepnutí pravým tlačítkem myši",
     "description": "Right mouse click"
   },
   "extraNameRockerLeftMouseClick": {
-    "message": "Left mouse click",
+    "message": "Klepnutí levým tlačítkem myši",
     "description": "Left mouse click"
   },
   "extraDescriptionRockerActive": {
-    "message": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa.",
+    "message": "Toto gesto spustíte podržením pravého tlačítka myši a následným stisknutím levého tlačítka myši a obráceně.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
 
   "extraNameWheelActive": {
-    "message": "Wheel gesture",
+    "message": "Gesta kolečkem myši",
     "description": "Wheel gesture"
   },
   "extraNameWheelMouseButton": {
-    "message": "Wheel gesture mouse button",
+    "message": "Tlačítko myši pro gesta kolečkem",
     "description": "Wheel gesture mouse button"
   },
   "extraNameWheelUp": {
-    "message": "Wheel up",
+    "message": "Kolečkem nahoru",
     "description": "Wheel up"
   },
   "extraNameWheelDown": {
-    "message": "Wheel down",
+    "message": "Kolečkem dolů",
     "description": "Wheel down"
   },
   "extraDescriptionWheelActive": {
-    "message": "Scroll up or down while holding the wheel gesture button.",
+    "message": "Posunout nahoru nebo dolů při stisknutém tlačítku pro gesta kolečkem.",
     "description": "Scroll up or down while holding the wheel gesture button."
   },
   "extraDescriptionWheelMouseButton": {
-    "message": "The mouse button which will trigger the wheel gesture.",
+    "message": "Tlačítko myši které spustí gesta kolečkem.",
     "description": "The mouse button which will trigger the wheel gesture."
   },
 
   "toggleButtonOn": {
-    "message": "On",
+    "message": "Zapnuto",
     "description": "On - setting checked"
   },
   "toggleButtonOff": {
-    "message": "Off",
+    "message": "Vypnuto",
     "description": "Off - setting not checked"
   },
 
   "recordClearButton": {
-    "message": "Clear",
+    "message": "Vymazat",
     "description": "Clear"
   },
 
